[package]
name = "hf-hub-progress-callback"
version = "0.1.0"
edition = "2021"

[dependencies]
hf-hub = {git = "https://github.com/huggingface/hf-hub.git", default-features = false}
serde = "1.0.217"

[dev-dependencies]
tokio = "1.43.0"

[features]
default = ["sync"]
sync = ["hf-hub/default-tls", "hf-hub/ureq"]
async-closure = ["hf-hub/default", "hf-hub/tokio"]