[package]
name = "hf-hub-simple-progress"
version = "0.1.1"
edition = "2024"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "MIT"
description = "Simplified download callback for hf-hub"
repository = "https://github.com/newfla/hf-hub-simple-progress"
keywords = ["huggingface", "hf", "hub", "machine-learning"]

[dependencies]
hf-hub = {version = "0.4.1", default-features = false}
serde = "1.0.217"

[dev-dependencies]
tokio = "1.43.0"

[features]
default = ["sync"]
sync = ["hf-hub/ureq"]
async-closure = ["hf-hub/default", "hf-hub/tokio"]
